frontend/test/should_fail/exec_029.grg
rule r : (Node) {
  modify{
    return (y);
    exec( (y:Node)=r ); // y cannot leave exec scope
  }
}
